Marker mit popup(pin/post?) und radius

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,13 @@ body{
 }
 
 #map{
-    height: 500px;
+    height: 400px;
     border: dashed;
 }
+
+@media screen and (min-width: 768px) {
+  body{
+      color: green;
+  }
+}
+
