--- a/src/style/style1.css
+++ b/src/style/style1.css
@@ -1,3 +1,11 @@
 body{
-    background:lightblue;
+    background: lightblue;
+}
+h1{
+    color: coral;
+    text-align: center;
+
+}
+.signInTitle{
+    padding-top: 100px;
 }
