logout color changed and refactoring

--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -9,3 +9,9 @@ html, body
     height: 100%;
     background: lightgray;
 }
+#logout{
+    background: whitesmoke;
+    color: black;
+    text-align: center;
+    vertical-align: middle;
+}
