--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -9,3 +9,12 @@ html, body
     height: 100%;
     background: lightgray;
 }
+#selectionText{
+    text-align: center;
+    font-weight: bold;
+    padding: 10px;
+}
+#title{
+    font-size: large;
+    font-weight: bold;
+}
